<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarWithStatusBarSize"
        android:elevation="@dimen/len_2"
        android:outlineProvider="bounds"
        tools:targetApi="lollipop">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/statusBarSize"
            android:paddingLeft="@dimen/len_4"
            android:paddingRight="@dimen/len_4">

            <ImageView
                android:id="@+id/im_back"
                android:layout_width="@dimen/len_40"
                android:layout_height="@dimen/len_40"
                android:layout_gravity="start|center_vertical"
                android:layout_margin="@dimen/len_4"
                android:clickable="true"
                android:foreground="@drawable/ic_touch_menu"
                android:padding="@dimen/len_10"
                android:scaleType="centerInside"
                android:src="@drawable/ic_back"
                android:tint="?attr/toolbarMenuIconColor" />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/person_details"
                android:textAppearance="@style/TextAppearance.Title" />

            <ImageView
                android:id="@+id/im_edit"
                android:layout_width="@dimen/len_40"
                android:layout_height="@dimen/len_40"
                android:layout_gravity="end|center_vertical"
                android:layout_margin="@dimen/len_4"
                android:clickable="true"
                android:foreground="@drawable/ic_touch_menu"
                android:padding="@dimen/len_10"
                android:scaleType="centerInside"
                android:src="@drawable/ic_edit_black"
                android:tint="?attr/toolbarMenuIconColor" />

        </FrameLayout>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/len_4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/len_128"
                android:layout_margin="@dimen/len_8"
                android:background="@drawable/bg_txt_border"
                android:ellipsize="middle"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/new_contact"
                android:textColor="@color/black"
                android:textSize="@dimen/font_56" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/black_alpha_32" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_gender"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/len_2"
                android:layout_marginStart="@dimen/len_4"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/person_gender"
                android:maxLines="1"
                android:paddingBottom="@dimen/len_8"
                android:paddingTop="@dimen/len_8"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textColorHint="@color/textSecond"
                android:textSize="@dimen/font_18" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/black_alpha_32" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/black_alpha_32" />

            <TextView
                android:id="@+id/txt_job"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/len_2"
                android:layout_marginStart="@dimen/len_4"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/person_job"
                android:maxLines="1"
                android:paddingBottom="@dimen/len_8"
                android:paddingTop="@dimen/len_8"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textColorHint="@color/textSecond"
                android:textSize="@dimen/font_18" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/black_alpha_32" />

            <TextView
                android:id="@+id/txt_address"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/len_2"
                android:layout_marginStart="@dimen/len_4"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/person_address"
                android:maxLines="1"
                android:paddingBottom="@dimen/len_8"
                android:paddingTop="@dimen/len_8"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textColorHint="@color/textSecond"
                android:textSize="@dimen/font_18" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/black_alpha_32" />

            <TextView
                android:id="@+id/txt_QQ"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/len_2"
                android:layout_marginStart="@dimen/len_4"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/person_qq"
                android:maxLines="1"
                android:paddingBottom="@dimen/len_8"
                android:paddingTop="@dimen/len_8"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textColorHint="@color/textSecond"
                android:textSize="@dimen/font_18" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/black_alpha_32" />

            <TextView
                android:id="@+id/txt_wechat"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/len_2"
                android:layout_marginStart="@dimen/len_4"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/person_wechat"
                android:maxLines="1"
                android:paddingBottom="@dimen/len_8"
                android:paddingTop="@dimen/len_8"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textColorHint="@color/textSecond"
                android:textSize="@dimen/font_18" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/black_alpha_32" />

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/len_2"
                android:layout_marginStart="@dimen/len_4"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/person_email"
                android:maxLines="1"
                android:paddingBottom="@dimen/len_8"
                android:paddingTop="@dimen/len_8"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textColorHint="@color/textSecond"
                android:textSize="@dimen/font_18" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/black_alpha_32" />

            <TextView
                android:id="@+id/txt_group"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/len_2"
                android:layout_marginStart="@dimen/len_4"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/person_group"
                android:maxLines="1"
                android:paddingBottom="@dimen/len_8"
                android:paddingTop="@dimen/len_8"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textColorHint="@color/textSecond"
                android:textSize="@dimen/font_18" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>